--- a/README
+++ b/README
@@ -67,6 +67,7 @@ Steps to build Debian Buster lxde sdcard image:
 
    sudo dd if=./out/sdcard.img of=/dev/sda bs=4096 conv=notrunc,fsync
 
+Plugin USB Headphone to tinker.
 Plugin sdcard to SBC
 Login:
 Username: linaro
@@ -77,6 +78,7 @@ Setup wifi for rk3328: plugin usb wifi dongle
 sudo ifconfig
 sudo dpkg-reconfigure tzdata
 sudo dpkg-reconfigure locales
+date
 sudo apt update
 sudo apt upgrade
 sync
@@ -85,10 +87,10 @@ Disable power saving and screen saver.
 glxinfo | grep OpenGL
 date
 
-sudo apt install speedtest-cli build-essential libjpeg-dev libpng-dev libpng16-16 pkg-config libx11-dev python3-pip python3-setuptools chromium chromium-sandbox
+sudo apt install speedtest-cli build-essential libjpeg-dev libpng-dev libpng16-16 pkg-config libx11-dev python3-pip python3-setuptools chromium chromium-sandbox ffmpeg mpv git
 speedtest-cli
 
-git clone https://github.com/glmark2/glmark2.git -b release-2020.04
+git clone https://github.com/glmark2/glmark2.git -b 2021.02
 cd glmark2
 ./waf configure --with-flavors=x11-glesv2
 ./waf
@@ -97,9 +99,9 @@ glmark2-es2
 
 Chromium -> youtube.com -> search YmDNhi07_Ho
 
-pip3 install -U yt-dlp
+pip3 install --no-deps -U yt-dlp
 ~/.local/bin/yt-dlp -f 'bestvideo[ext=mp4]+bestaudio[ext=m4a]' hyUhEjtlDLA -o avemaria.mp4
-vlc avemaria.mp4
+mpv avemaria.mp4
 
 For rpi4b, install mesa and drm in buster:
 sudo apt-get remove meson
@@ -111,7 +113,7 @@ sudo apt-get build-dep mesa -y  ( ignore errors )
 sudo vi /etc/apt/sources.list.d/raspi.list ( comment out first line )
 git clone --depth=1 -b mesa-19.3.2 https://gitlab.freedesktop.org/mesa/mesa/
 cd mesa; mkdir build; cd build;
-sudo apt-get install libxcb-randr0-dev libxrandr-dev libxcb-xinerama0-dev libxinerama-dev libxcursor-dev libxcb-cursor-dev libxkbcommon-dev xutils-dev xutils-dev libpthread-stubs0-dev libpciaccess-dev libffi-dev x11proto-xext-dev libxcb1-dev bison flex libssl-dev libgnutls28-dev x11proto-dri2-dev x11proto-dri3-dev libx11-dev libxcb-glx0-dev libx11-xcb-dev libxext-dev libxdamage-dev libxfixes-dev libva-dev x11proto-randr-dev x11proto-present-dev libclc-dev libelf-dev git build-essential mesa-utils libvulkan-dev ninja-build libvulkan1 python-mako libdrm-dev libxshmfence-dev libxxf86vm-dev libunwind-dev vulkan-tools vulkan-utils ninja-build libxcb-*dev wayland-protocols libwayland-egl-backend-dev gettext
+sudo apt-get install libxcb-randr0-dev libxrandr-dev libxcb-xinerama0-dev libxinerama-dev libxcursor-dev libxcb-cursor-dev libxkbcommon-dev xutils-dev xutils-dev libpthread-stubs0-dev libpciaccess-dev libffi-dev x11proto-xext-dev libxcb1-dev bison flex libssl-dev libgnutls28-dev x11proto-dri2-dev x11proto-dri3-dev libx11-dev libxcb-glx0-dev libx11-xcb-dev libxext-dev libxdamage-dev libxfixes-dev libva-dev x11proto-randr-dev x11proto-present-dev libclc-dev libelf-dev git build-essential mesa-utils libvulkan-dev ninja-build libvulkan1 python-mako libdrm-dev libxshmfence-dev libxxf86vm-dev libunwind-dev vulkan-tools vulkan-utils ninja-build libxcb-*dev wayland-protocols libwayland-egl-backend-dev gettext libexpat1-dev
 
 sudo meson --prefix="/usr" ..
 sudo ninja install
@@ -126,6 +128,6 @@ glmark2-es2
 
 Chromium -> youtube.com -> search YmDNhi07_Ho
 
-pip3 install -U yt-dlp
+pip3 install --no-deps -U yt-dlp
 ~/.local/bin/yt-dlp -f 'bestvideo[ext=mp4]+bestaudio[ext=m4a]' hyUhEjtlDLA -o avemaria.mp4
-vlc avemaria.mp4
+mpv avemaria.mp4
