--- a/README
+++ b/README
@@ -7,6 +7,7 @@ tinker ( ASUS TinkerBoard )
 Steps to build Debian Buster lxde sdcard image:
 
 1. git clone https://github.com/philipchen888/build-buster-lxde.git
+   pip3 install pyelftools
    sudo apt-get install build-essential git libssl-dev nmap net-tools libncurses5-dev libncursesw5-dev dnsutils vsftpd ftp binfmt-support qemu-user-static scons libncurses5-dev libncursesw5-dev libdbus-glib-1-dev libbluetooth-dev python-dev python-setuptools python3-dev python3-pip python3-setuptools libcurl4-openssl-dev gettext dbus-x11 chrpath diffstat gawk texinfo curl flex bison device-tree-compiler python swig
 
 2. Install cross compiler and live-build:
@@ -32,7 +33,8 @@ Steps to build Debian Buster lxde sdcard image:
    sudo dd if=./out/sdcard.img of=/dev/sda bs=4096 conv=notrunc,fsync
 
 4. cd ~/build-buster-lxde/radxa
-   git clone https://github.com/radxa/u-boot --depth=1 -b stable-4.4-rockpi4
+   sudo apt-get install libgnutls28-dev
+   git clone https://github.com/u-boot/u-boot.git -b u-boot-2023.07.y
    git clone https://github.com/radxa/kernel --depth=1 -b release-4.4-rockpi4
    cd kernel; mkdir tmp; cd tmp; mkdir lib;
    cd ../../; mkdir out;
@@ -45,7 +47,6 @@ Steps to build Debian Buster lxde sdcard image:
 
 5. cd ~/build-buster-lxde/rk3328
    git clone https://github.com/u-boot/u-boot.git -b u-boot-2023.07.y
-   change CONFIG_BINMAN to CONFIG_BINMAN2 in ./u-boot/Makefile
    git clone https://github.com/FireflyTeam/kernel --depth=1 -b rk3328/firefly
    cd kernel; mkdir tmp; cd tmp; mkdir lib;
    cd ../../; mkdir out;
@@ -89,6 +90,7 @@ glxinfo | grep OpenGL
 date
 
 sudo apt install speedtest-cli build-essential libjpeg-dev libpng-dev libpng16-16 pkg-config libx11-dev python3-pip python3-setuptools chromium chromium-sandbox ffmpeg mpv git
+
 speedtest-cli
 
 git clone https://github.com/glmark2/glmark2.git -b 2021.02
